fix icons align

--- a/materialize/css/content.css
+++ b/materialize/css/content.css
@@ -8,7 +8,8 @@ header, main, footer {
     }
 }
 
-.navl{
+.material-icons{
+    vertical-align:middle;
 
 
 }
